// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchResults Component renders the UI as expected 1`] = `
<body>
  <div>
    <section
      class="SearchResults"
    >
      <header>
        <h2>
          Results
        </h2>
      </header>
      <ul>
        <li>
          <a
            href="http://localhost/org/1"
            rel="noreferrer"
            target="_blank"
          >
            YMCA DC
          </a>
        </li>
        <li>
          <a
            href="http://localhost/org/2"
            rel="noreferrer"
            target="_blank"
          >
            Humane Society of Fairfax County, Inc
          </a>
        </li>
        <li>
          <a
            href="http://localhost/org/3"
            rel="noreferrer"
            target="_blank"
          >
            National VOAD
          </a>
        </li>
        <li>
          <a
            href="http://localhost/org/4"
            rel="noreferrer"
            target="_blank"
          >
            National Air and Space Museum
          </a>
        </li>
        <li>
          <a
            href="http://localhost/org/5"
            rel="noreferrer"
            target="_blank"
          >
            Fairfax County Health Department
          </a>
        </li>
        <li>
          <a
            href="http://localhost/org/6"
            rel="noreferrer"
            target="_blank"
          >
            Sully Historic Site
          </a>
        </li>
        <li>
          <a
            href="http://localhost/org/7"
            rel="noreferrer"
            target="_blank"
          >
            Vecinos Unidos
          </a>
        </li>
        <li>
          <a
            href="http://localhost/org/8"
            rel="noreferrer"
            target="_blank"
          >
            Girls on the Run of Northern Virginia
          </a>
        </li>
        <li>
          <a
            href="http://localhost/org/9"
            rel="noreferrer"
            target="_blank"
          >
            Optimist Club of Herndon, VA
          </a>
        </li>
        <li>
          <a
            href="http://localhost/org/10"
            rel="noreferrer"
            target="_blank"
          >
            FACETS
          </a>
        </li>
      </ul>
      <div
        class="SearchResults__page-buttons"
      >
        <button
          disabled=""
          type="button"
        >
          Previous
        </button>
        <button
          type="button"
        >
          Next
        </button>
      </div>
    </section>
  </div>
</body>
`;

exports[`SearchResults Component renders the next page when 'Next' clicked 1`] = `
<body>
  <div>
    <section
      class="SearchResults"
    >
      <header>
        <h2>
          Results
        </h2>
      </header>
      <ul>
        <li>
          <a
            href="http://localhost/org/11"
            rel="noreferrer"
            target="_blank"
          >
            American Cancer Society in District of Columbia
          </a>
        </li>
      </ul>
      <div
        class="SearchResults__page-buttons"
      >
        <button
          type="button"
        >
          Previous
        </button>
        <button
          disabled=""
          type="button"
        >
          Next
        </button>
      </div>
    </section>
  </div>
</body>
`;

exports[`SearchResults Component renders the previous page when 'Previous' clicked 1`] = `
<body>
  <div>
    <section
      class="SearchResults"
    >
      <header>
        <h2>
          Results
        </h2>
      </header>
      <ul>
        <li>
          <a
            href="http://localhost/org/1"
            rel="noreferrer"
            target="_blank"
          >
            YMCA DC
          </a>
        </li>
        <li>
          <a
            href="http://localhost/org/2"
            rel="noreferrer"
            target="_blank"
          >
            Humane Society of Fairfax County, Inc
          </a>
        </li>
        <li>
          <a
            href="http://localhost/org/3"
            rel="noreferrer"
            target="_blank"
          >
            National VOAD
          </a>
        </li>
        <li>
          <a
            href="http://localhost/org/4"
            rel="noreferrer"
            target="_blank"
          >
            National Air and Space Museum
          </a>
        </li>
        <li>
          <a
            href="http://localhost/org/5"
            rel="noreferrer"
            target="_blank"
          >
            Fairfax County Health Department
          </a>
        </li>
        <li>
          <a
            href="http://localhost/org/6"
            rel="noreferrer"
            target="_blank"
          >
            Sully Historic Site
          </a>
        </li>
        <li>
          <a
            href="http://localhost/org/7"
            rel="noreferrer"
            target="_blank"
          >
            Vecinos Unidos
          </a>
        </li>
        <li>
          <a
            href="http://localhost/org/8"
            rel="noreferrer"
            target="_blank"
          >
            Girls on the Run of Northern Virginia
          </a>
        </li>
        <li>
          <a
            href="http://localhost/org/9"
            rel="noreferrer"
            target="_blank"
          >
            Optimist Club of Herndon, VA
          </a>
        </li>
        <li>
          <a
            href="http://localhost/org/10"
            rel="noreferrer"
            target="_blank"
          >
            FACETS
          </a>
        </li>
      </ul>
      <div
        class="SearchResults__page-buttons"
      >
        <button
          disabled=""
          type="button"
        >
          Previous
        </button>
        <button
          type="button"
        >
          Next
        </button>
      </div>
    </section>
  </div>
</body>
`;
